--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,10 +7,7 @@
 <title>Registro</title>
 </head>
 <body>
-    <%
-String contextPath = request.getContextPath();
-%>
-    <form class="box" action= contextPath + "/Registro" method="POST">
+    <form class="box" action="Registro" method="POST">
         <h1>Registro</h1>
         <input type="text" name="username" placeholder="Username" />
         <input type="email" name="email" placeholder="Email">
