--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,7 +7,7 @@
 <title>Registro</title>
 </head>
 <body>
-    <form class="box" action="https://proyecto1-web2.herokuapp.com/Registro" method="POST">
+    <form class="box" action="Servlet/Registro" method="POST">
         <h1>Registro</h1>
         <input type="text" name="username" placeholder="Username" />
         <input type="email" name="email" placeholder="Email">
